# perplexity-ai-cpp-client

./: CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml
cmake/: perplexity-config.cmake.in
examples/: CMakeLists.txt  async_requests.cpp  basic_chat.cpp
include/: HttpClient.h  RateLimiter.h  client.h  config.h  exceptions.h  models.h  perplexity.h
tests/: CMakeLists.txt  perplexity_tests.cpp
